--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   </a>
   <a href="#photos" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
     <i class="fa fa-eye w3-xxlarge"></i>
-    <p>PHOTOS</p>
+    <p>MY CARD</p>
   </a>
   <a href="#gacha" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
     <i class="fa fa-random w3-xxlarge"></i>
@@ -309,6 +309,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
     </style>
     <div class="button-container">
+<a href="https://github.com/theleaderofenemy/Dah-Nyerah/blob/a0da6f99130aef00db092a9407ffdbf53a0b7cba/Profile.pdf" download style="text-decoration:none; color:inherit">
       <button class="button">
           <span class="button_lg">
               <span class="button_sl"></span>
