--- a/index.html
+++ b/index.html
@@ -309,13 +309,16 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
     </style>
     <div class="button-container">
-      <button class="button">
-          <span class="button_lg">
-              <span class="button_sl"></span>
-              <span class="button_text"><a href="https://github.com/theleaderofenemy/Dah-Nyerah/blob/a0da6f99130aef00db092a9407ffdbf53a0b7cba/Profile.pdf" download style="text-decoration:none; color:inherit">Download Resume</a></span>
-          </span>
-      </button>
-  </div>
+    <button class="button">
+        <span class="button_lg">
+            <span class="button_sl"></span>
+            <span class="button_text">
+                <a href="https://github.com/theleaderofenemy/Dah-Nyerah/blob/a0da6f99130aef00db092a9407ffdbf53a0b7cba/Profile.pdf" download="YourResumeFileName.pdf" style="text-decoration: none; color: inherit;">Download Resume</a>
+            </span>
+        </span>
+    </button>
+</div>
+
   
   <!-- Portfolio Section -->
 <div class="w3-padding-64 w3-content" id="photos">
